apps/kubernetes/k3s/apps/syncthing/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.hughboi.vip`)
      kind: Rule
      services:
        - name: syncthing-ui
          port: 8384
  tls:
    secretName: hughboi-tls
